--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.2"
 edition = "2024"
 
 [dependencies]
-# # local development
-# re-tex = { path = "../re-tex" }
-# ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }
+# local development
+re-tex = { path = "../re-tex" }
+ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }
 
-re-tex = { git = "https://github.com/eigeen/re-tex.git", branch = "main" }
-ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs.git", branch = "main" }
+# re-tex = { git = "https://github.com/eigeen/re-tex.git", branch = "main" }
+# ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs.git", branch = "main" }
 
 dialoguer = "0.11"
 eyre = "0.6"
