--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mhws-tex-decompressor"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 
 [dependencies]
@@ -16,3 +16,4 @@ eyre = "0.6"
 indicatif = "0.17"
 rayon = "1.10"
 parking_lot = "0.12"
+colored = "3.0"
