Add user-configurable thread count and improve parallel processing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2024"
 
 [dependencies]
 # local development
-re-tex = { path = "../re-tex" }
-ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }
+# re-tex = { path = "../re-tex" }
+# ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }
 
-# re-tex = { git = "https://github.com/eigeen/re-tex.git", branch = "main" }
-# ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs.git", branch = "main" }
+re-tex = { git = "https://github.com/eigeen/re-tex.git", branch = "main" }
+ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs.git", branch = "main" }
 
 dialoguer = "0.11"
 eyre = "0.6"
@@ -17,3 +17,4 @@ indicatif = "0.17"
 rayon = "1.10"
 parking_lot = "0.12"
 colored = "3.0"
+num_cpus = "1.17.0"
